--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,10 +11,9 @@ parserOptions:
   ecmaVersion: latest
 
 rules:
-  {
-    no-console: 0,
-    import/extensions: - error, # FIXME: remove when rule will be adjusted for new nodejs version
-    - ignorePackages,
-    - js: always,
-    no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }],
-  }
+    no-console: 0
+    import/extensions: 
+      - error # FIXME: remove when rule will be adjusted for new nodejs version
+      - ignorePackages
+      - js: always
+    no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
