--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "27.6.3",
     "prettier": "^3.2.2"
   }
 }
